# gcloud-pubsub-emulator

./: pubsubc.py  pyproject.toml
.cloudbuild/: cloudbuild.gcloud-pubsub-emulator.yaml
